modified welcome messages on home page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           ><img src="images/avatar.jpg" alt=""
         /></a>
         <h1 style="color: white; font-weight: 200; font-size: 140%;">
-          Hi, I'm Adi Singh: a tenacious creator, engineer, and full stack
-          developer.
+          Hi, I'm Adi Singh: a tenacious creator, engineer, and developer.
         </h1>
       </div>
 
@@ -92,11 +91,9 @@
           <h2 style="font-weight: bold;">Welcome to my Portfolio.<br /></h2>
         </header>
         <p style="font-size: 105%;">
-          I am a CS Major at Georgia Tech, interested in fields like full-stack
-          application development and data analytics/processing. Here, you can
+          I am a CS Major at Georgia Tech, interested in Machine Learning and Backend Development. Here, you can
           find some of the full stack projects that I've been working on. I love
-          creating and building applications (web and mobile) from start to
-          finish.
+          creating and building applications from start to finish.
         </p>
         <p class="personal_des">
           Status: Seeking Software Engineer Internship for Summer 2021 <br />
