updated website with new resume

--- a/index.html
+++ b/index.html
@@ -157,45 +157,47 @@
               stack.
             </p>
           </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="https://github.com/rsthind/Tube" target="_blank"
-              ><img src="./images/tube.jpg" class="project-image-mobile" alt=""
-            /></a>
-            <h3 style="font-size: 120%;">Tube: Tutoring Mobile Application</h3>
-            <p style="font-size: 90%;">
-              A mobile tutoring application supporting both iOS and Android.
-              Tube is meant to simplify the tutoring process: to seamlessly
-              connects users and tutors on a university campus. Utilized Google
-              Firebase for the backing database and subsequently implemented a
-              Messaging API in order to allow users and tutors to connect in a
-              matter of minutes.
-            </p>
-          </article>
         </div>
       </section>
 
       <!-- Three -->
       <section id="three">
         <h2 style="font-weight: bold; font-size: 150%;">Work Experience</h2>
+
         <div class="work-exp-container">
-			<div class="tmo-logo-container">
-				<img
-				class="work-logo"
-				src="./images/tmobile.png"
-				alt="t-mobile logo"
-			  />
-			</div>
-          
+          <img class="queues-work-logo" src="./images/queues.png" alt="queues logo" />
           <div class="work-description-container">
             <p style="font-weight: bold;">
-              Software Engineer Intern - Summer 2020
+              Backend Developer
             </p>
+            <p style="position: absolute; top: 0px; right: 10px;">August 2020 - Present</p>
             <p class="work-summary">
-				Built a full-stack application to assist DevOps Engineers in monitoring/resolving big data job workflows.
-				Optimized the job failure resolution process for Senior Engineers by 50% by transferring their daily 
-				logging responsibilities from an Excel Spreadsheet to an internally deployed web application. Performed live updates 
-				by regularly scanning a REST API to provide insight on the status of over 1,000 job failures stored in a PostgreSQL Database.
-			</p>
+              Built REST API in Flask to handle mass amounts of livestreamed computer vision based data. Stored over 200k data 
+              points in InfluxDB to perform continuous analytical queries and updates. Implemented JSON tokenization to securely 
+              store/authorize mobile and web users in MongoDB.
+            </p>
+          </div>
+        </div>
+
+        <div class="work-exp-container">
+          <div class="tmo-logo-container">
+            <img
+            class="work-logo"
+            src="./images/tmobile.png"
+            alt="t-mobile logo"
+            />
+          </div>
+          <div class="work-description-container">
+            <p style="font-weight: bold;">
+              Software Engineer Intern
+            </p>
+            <p style="position: absolute; top: 0px; right: 10px;">Summer 2020</p>
+            <p class="work-summary">
+              Built a full-stack application to assist DevOps Engineers in monitoring/resolving big data job workflows.
+              Optimized the job failure resolution process for Senior Engineers by 50% by transferring their daily 
+              logging responsibilities from an Excel Spreadsheet to an internally deployed web application. Performed live updates 
+              by regularly scanning a REST API to provide insight on the status of over 1,000 job failures stored in a PostgreSQL Database.
+            </p>
           </div>
         </div>
 
@@ -203,12 +205,13 @@
           <img class="nist-work-logo" src="./images/nist.png" alt="nist logo" />
           <div class="work-description-container">
             <p style="font-weight: bold;">
-              Software and Systems Intern - Summer 2019
+              Software and Systems Intern
             </p>
+            <p style="position: absolute; top: 0px; right: 10px;">Summer 2019</p>
             <p class="work-summary">
-				Gathered data from infrared sensors used to measure foot traffic in high-volume, public locations.
-				Scripted regression models in Python to extract sinusoidal patterns in collected 
-				foot traffic data and extrapolate said patterns. 
+              Gathered data from infrared sensors used to measure foot traffic in high-volume, public locations.
+              Scripted regression models in Python to extract sinusoidal patterns in collected 
+              foot traffic data and extrapolate said patterns. 
             </p>
           </div>
         </div>
