added NFL ML project to portfolio

--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
         <h2 style="font-weight: bold;">Personal Projects</h2>
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
+            <a href="https://adisingh50.github.io/nfl-predictor/" target="_blank"
+              ><img src="./images/nfl_predictor_preview.png" class="project-image-web" alt=""
+            /></a>
+            <h3 style="font-size: 120%;">NFL Game Winner Predictor</h3>
+            <p style="font-size: 90%;">
+              A Machine Learning project utilizing unsupervised and supervised learning algorithms to predict the winner 
+              of an NFL game given aggregated offensive and defensive statistics for both teams heading into the game.
+            </p>
+          </article>
+          <article class="col-6 col-12-xsmall work-item">
             <a
               href="https://expo.io/@asingh4688/viewmarks-client"
               target="_blank"
