update portfolio for amazon internship

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
           <h2 style="font-weight: bold;">Welcome to my Portfolio.<br /></h2>
         </header>
         <p style="font-size: 105%;">
-          I am a CS Major at Georgia Tech, interested in Machine Learning and Backend Development. Here, you can
+          I am a CS Major at Georgia Tech, interested in Machine Learning, Robotics, and Backend Development. Here, you can
           find some of the full stack projects that I've been working on. I love
           creating and building applications from start to finish.
         </p>
         <p class="personal_des">
-          Status: Seeking Software Engineer Internship for Summer 2021 <br />
+          Status: Incoming Amazon SDE Intern - Summer 2021 <br />
           Education: Junior CS Major @ Georgia Tech
         </p>
       </section>
