--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="location-contact-portion">
-          <p class="contact-nums">Atlanta, GA</p>
+          <p class="contact-nums">Seattle, WA</p>
           <i
             class="fa fa-map-marker"
             style="
@@ -91,12 +91,11 @@
           <h2 style="font-weight: bold;">Welcome to my Portfolio.<br /></h2>
         </header>
         <p style="font-size: 105%;">
-          I am a CS Major at Georgia Tech, interested in Machine Learning, Robotics, and Backend Development. Here, you can
-          find some of the full stack projects that I've been working on. I love
-          creating and building applications from start to finish.
+          I am a CS Major at Georgia Tech, interested in Deep Learning, Robotics, and Backend Development. Here, you can
+          find some of the projects that I've been working on. I love creating and building applications from start to finish.
         </p>
         <p class="personal_des">
-          Status: Incoming Amazon SDE Intern - Summer 2021 <br />
+          Status: Amazon SDE Intern - Summer 2021 <br />
           Education: Junior CS Major @ Georgia Tech
         </p>
       </section>
@@ -180,7 +179,7 @@
             <p style="font-weight: bold;">
               Backend Developer
             </p>
-            <p style="position: absolute; top: 0px; right: 10px;">August 2020 - Present</p>
+            <p style="position: absolute; top: 0px; right: 10px;">August 2020 - April 2021</p>
             <p class="work-summary">
               Built REST API in Flask to handle mass amounts of livestreamed computer vision based data. Stored over 200k data 
               points in InfluxDB to perform continuous analytical queries and updates. Implemented JSON tokenization to securely 
